--- a/Proyecto_IIUnidad/Vista4/Menu2.resx
+++ b/Proyecto_IIUnidad/Vista4/Menu2.resx
@@ -57,10 +57,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="tabbedGroupedmdiManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>63</value>
-  </metadata>
+  <data name="tabbedGroupedmdiManager1.ContextMenuItem" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEpTeW5jZnVzaW9uLlRvb2xzLldpbmRvd3MsIEN1bHR1cmU9bmV1
+        dHJhbCwgUHVibGljS2V5VG9rZW49M2Q2N2VkMWY4N2Q0NGM4OQwDAAAARlN5c3RlbS5XaW5kb3dzLkZv
+        cm1zLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAADRT
+        eW5jZnVzaW9uLldpbmRvd3MuRm9ybXMuVG9vbHMuWFBNZW51cy5QYXJlbnRCYXJJdGVtEwAAAA1DYXRl
+        Z29yeUluZGV4B0NoZWNrZWQHRW5hYmxlZApJbWFnZUluZGV4Ck1lcmdlT3JkZXIJTWVyZ2VUeXBlClBh
+        aW50U3R5bGUIU2hvcnRjdXQEVGV4dAdUb29sdGlwAklEB01hbmFnZXISRGlzYWJsZWRJbWFnZUluZGV4
+        FUhpZ2hsaWdodGVkSW1hZ2VJbmRleBBTZXBhcmF0b3JJbmRpY2VzC1BhcmVudFN0eWxlDENsb3NlT25D
+        bGljaw9Vc2VQYXJ0aWFsTWVudXMFSXRlbXMAAAAAAAQEBAEBAQIAAAMEAAADCAEBCAggU3lzdGVtLldp
+        bmRvd3MuRm9ybXMuTWVyZ2VBY3Rpb24DAAAAMVN5bmNmdXNpb24uV2luZG93cy5Gb3Jtcy5Ub29scy5Y
+        UE1lbnVzLlBhaW50U3R5bGUCAAAAHVN5c3RlbS5XaW5kb3dzLkZvcm1zLlNob3J0Y3V0AwAAAAgIHFN5
+        c3RlbS5Db2xsZWN0aW9ucy5BcnJheUxpc3Q5U3luY2Z1c2lvbi5XaW5kb3dzLkZvcm1zLlRvb2xzLlhQ
+        TWVudXMuUGFyZW50QmFySXRlbVN0eWxlAgAAAAEBHFN5c3RlbS5Db2xsZWN0aW9ucy5BcnJheUxpc3QC
+        AAAA/////wAB/////wAAAAAF/P///yBTeXN0ZW0uV2luZG93cy5Gb3Jtcy5NZXJnZUFjdGlvbgEAAAAH
+        dmFsdWVfXwAIAwAAAAAAAAAF+////zFTeW5jZnVzaW9uLldpbmRvd3MuRm9ybXMuVG9vbHMuWFBNZW51
+        cy5QYWludFN0eWxlAQAAAAd2YWx1ZV9fAAgCAAAAAAAAAAX6////HVN5c3RlbS5XaW5kb3dzLkZvcm1z
+        LlNob3J0Y3V0AQAAAAd2YWx1ZV9fAAgDAAAAAAAAAAYHAAAAAAkHAAAACQcAAAAK//////////8JCAAA
+        AAX3////OVN5bmNmdXNpb24uV2luZG93cy5Gb3Jtcy5Ub29scy5YUE1lbnVzLlBhcmVudEJhckl0ZW1T
+        dHlsZQEAAAAHdmFsdWVfXwAIAgAAAAAAAAABAQkKAAAABAgAAAAcU3lzdGVtLkNvbGxlY3Rpb25zLkFy
+        cmF5TGlzdAMAAAAGX2l0ZW1zBV9zaXplCF92ZXJzaW9uBQAACAgJCwAAAAIAAAABAAAAAQoAAAAIAAAA
+        CQwAAAAAAAAAAAAAABALAAAAAgAAAAgIAAAAAAgIBAAAABAMAAAAAAAAAAs=
+</value>
+  </data>
 </root>
